--- a/style.css
+++ b/style.css
@@ -76,3 +76,7 @@ h1 {
   text-align: center; /* Allinea il testo al centro */
   text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5); /* Ombra decisa e scura */
 }
+
+    p {
+        color: #ffffff; /* Colore bianco */
+    }
